# WDSOptimiser

./: CMakeLists.txt  MacbookVariables.txt  MainPar.cpp  MainSer.cpp  Pathify.hpp  README.md  WDSNSGAII.cpp  WDSNSGAII.h  WDSOptCheckpoints.cpp  WDSOptGUICheckpoints.h  WDSOptParameters.cpp  WDSOptParameters.hpp  WDSOptPostProcess.cpp  WDSOptPostProcess.h  WDSOptimiser.cpp  WDSOptimiser.hpp  WDSUtility.hpp
GUI/: CMakeLists.txt  MetricLinePlotQtSignal.cpp  MetricLinePlotQtSignal.h  TimeSeriesQtChart.cpp  TimeSeriesQtChart.h  WDSOptGUICheckpoints.cpp  WDSOptGUICheckpoints.h  main.cpp  nsgaiiguimainwindow.ui  nsgaiirunningpage.cpp  nsgaiirunningpage.h  optimisationwizardpage.cpp  optimisationwizardpage.h  optimisationwizardpage.ui  optimiserthread.cpp  optimiserthread.h
tests/NYTUN/: dup_nytun2_owa_en2_macbook.opt  dup_nytun_macbook.cfg
